Import of SAPER/Time-Duration-fr-1.01 from CPAN.
gitpan-cpan-distribution: Time-Duration-fr
gitpan-cpan-version:      1.01
gitpan-cpan-path:         SAPER/Time-Duration-fr-1.01.tar.gz
gitpan-cpan-author:       SAPER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Time-Duration-fr
 
+1.01    2010.06.21  (SAPER)
+        [DIST] Fix missing prereqs.
+
 1.00    2010.06.19  (SAPER)
         First version released on the CPAN.
 
